--- a/index.html
+++ b/index.html
@@ -1,13 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landify</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="header__menu">                
+                <nav class="header__nav">
+                    <div class="header__logo">
+                        <img class="header__logo-img" src="img/header_logo.svg" width="105" height="28" alt="logo Landify">
+                    </div>
+                    <ul class="nav__list">
+                        <li class="nav__list-item">
+                            <a class="nav__link" href="#">
+                                About
+                            </a>
+                        </li>
+                        <li class="nav__list-item">
+                            <a class="nav__link" href="#">
+                            Products
+                        </a>
+                        </li>
+                        <li class="nav__list-item">
+                            <a class="nav__link" href="#">
+                                Pricing
+                            </a>
+                        </li>
+                        <li class="nav__list-item">
+                            <a class="nav__link" href="#">
+                                Blog
+                            </a>
+                        </li>
+                        <li class="nav__list-item">
+                            <a class="nav__link" href="#">
+                                Jobs
+                            </a>
+                        </li>
+                        <li class="nav__list-item">
+                            <a class="nav__link" href="#">
+                                More
+                            </a>
+                        </li>
+                    </ul>
+                    
+                </nav>
+                <div class="header__link">
+                    <a href="">
+                        <img src="img/header_GooglePlay.svg" width="135" height="40" alt="">
+                    </a>
+                    <a href="">
+                        <img src="img/header_AppStore.svg" width="135" height="40" alt="">
+                    </a>
+                </div>                              
+            </div> 
+            <div class="header__inner">
+                <div class="inner__content">
+                    <h1 class="inner__content-title">Organise projects.<br>Get more done.</h1>
+                    <button class="inner__btn">Get Started</button>
+                </div>
+                <div class="inner__img">
+                    <img class="inner__img-img" src="img/header_iPhoneX.png" width="350" height="640" alt="iPhone X">
+                </div>
+            </div>           
+        </div>
+
+    </header>
+
+    <section>
+        <div class="container">
+            <div class="logo__clouds">
+                <div class="logo__list">
+                    <img class="logo__list-item" src="img/Airbnb Logo.svg" alt="">
+                    <img class="logo__list-item" src="img/Hubspot Logo.svg" alt="">
+                    <img class="logo__list-item" src="img/Google Logo.svg" alt="">
+                    <img class="logo__list-item" src="img/Microsoft Logo.svg" alt="">
+                    <img class="logo__list-item" src="img/Walmart Logo.svg" alt="">
+                    <img class="logo__list-item" src="img/FedEx Logo.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
+
 </html>
