add link logo clouds

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             <div class="header__menu">                
                 <nav class="header__nav">
                     <div class="header__logo">
-                        <img class="header__logo-img" src="img/header_logo.svg" width="105" height="28" alt="logo Landify">
+                        <a class="header__logo-link" href="#">
+                            <img class="header__logo-img" src="img/header_logo.svg" width="105" height="28" alt="logo Landify">
+                        </a>
+                        
                     </div>
                     <ul class="nav__list">
                         <li class="nav__list-item">
@@ -79,12 +82,24 @@
         <div class="container">
             <div class="logo__clouds">
                 <div class="logo__list">
-                    <img class="logo__list-item" src="img/Airbnb Logo.svg" alt="">
-                    <img class="logo__list-item" src="img/Hubspot Logo.svg" alt="">
-                    <img class="logo__list-item" src="img/Google Logo.svg" alt="">
-                    <img class="logo__list-item" src="img/Microsoft Logo.svg" alt="">
-                    <img class="logo__list-item" src="img/Walmart Logo.svg" alt="">
-                    <img class="logo__list-item" src="img/FedEx Logo.svg" alt="">
+                    <a href="#">
+                        <img class="logo__list-item" src="img/Airbnb Logo.svg" alt="Airbnb Logo">
+                    </a>
+                    <a href="#">
+                        <img class="logo__list-item" src="img/Hubspot Logo.svg" alt="Hubspot Logo">
+                    </a>
+                    <a href="#">
+                        <img class="logo__list-item" src="img/Google Logo.svg" alt="Google Logo">
+                    </a>
+                    <a href="#">
+                        <img class="logo__list-item" src="img/Microsoft Logo.svg" alt="Microsoft Logo">
+                    </a>
+                    <a href="#">
+                        <img class="logo__list-item" src="img/Walmart Logo.svg" alt="Walmart Logo">
+                    </a>                    
+                    <a href="#">
+                        <img class="logo__list-item" src="img/FedEx Logo.svg" alt="FedEx Logo">
+                    </a>
                 </div>
             </div>
         </div>
