add section features

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     </header>
 
-    <section>
+    <section class="logo">
         <div class="container">
             <div class="logo__clouds">
                 <div class="logo__list">
@@ -100,6 +100,78 @@
                     <a href="#">
                         <img class="logo__list-item" src="img/FedEx Logo.svg" alt="FedEx Logo">
                     </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="features">
+        <div class="container">
+            <div class="features__list">
+                <div class="features__title">
+                    <h2 class="features__title-title">
+                        Tailor-made features
+                    </h2>
+                    <p class="features__title-text">
+                        Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.
+                    </p>
+                </div>
+                <div class="features__cards">
+                    <div class="card__item">
+                        <img class="card__item-img" src="img/f_01.svg" alt="">
+                        <h4 class="card__item-title">
+                            Robust workflow
+                        </h4>
+                        <p class="card__item-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum. 
+                        </p>
+                    </div>
+                    <div class="card__item">
+                        <img class="card__item-img" src="img/f_02.svg" alt="">
+                        <h4 class="card__item-title">
+                            Flexibility
+                        </h4>
+                        <p class="card__item-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.
+                        </p>
+                    </div>
+                    <div class="card__item">
+                        <img class="card__item-img" src="img/f_03.svg" alt="">
+                        <h4 class="card__item-title">
+                            User friendly
+                        </h4>
+                        <p class="card__item-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.
+                        </p>
+                    </div>
+                    <div class="card__item">
+                        <img class="card__item-img" src="img/f_04.svg" alt="">
+                        <h4 class="card__item-title">
+                            Multiple layouts
+                        </h4>
+                        <p class="card__item-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.
+                        </p>
+                    </div>
+                    <div class="card__item">
+                        <img class="card__item-img" src="img/f_05.svg" alt="">
+                        <h4 class="card__item-title">
+                            Better components
+                        </h4>
+                        <p class="card__item-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.
+                        </p>
+                    </div>
+                    <div class="card__item">
+                        <img class="card__item-img" src="img/f_06.svg" alt="">
+                        <h4 class="card__item-title">
+                            Well organised
+                        </h4>
+                        <p class="card__item-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.
+                        </p>
+                    </div>
+                    
                 </div>
             </div>
         </div>
