add section achievements

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landify</title>    
+    <title>Landify</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -189,11 +189,13 @@
                         <span class="customers__stories-text">
                             Get inspired by these stories.
                         </span>
-                    </h2>                    
+                    </h2>
                     <div class="story__item">
                         <img class="story__item-img" src="img/Hubspot Logo.svg" width="140" height="40" alt="">
                         <p class="story__item-text">
-                            To quickly start my startup landing page design, I was looking for a landing page UI Kit. Landify is one of the best landing page UI kit I have come across. It’s so flexible, well organised and easily editable.   
+                            To quickly start my startup landing page design, I was looking for a landing page UI Kit.
+                            Landify is one of the best landing page UI kit I have come across. It’s so flexible, well
+                            organised and easily editable.
                         </p>
                         <span class="story__item-username">
                             Floyd Miles
@@ -208,7 +210,8 @@
                     <div class="story__item second">
                         <img class="story__item-img" src="img/Airbnb Logo.svg" width="130" height="40" alt="">
                         <p class="story__item-text">
-                            I used landify and created a landing page for my startup within a week. The Landify UI Kit is simple and highly intuitive, so anyone can use it.   
+                            I used landify and created a landing page for my startup within a week. The Landify UI Kit
+                            is simple and highly intuitive, so anyone can use it.
                         </p>
                         <span class="story__item-username">
                             Jane Cooper
@@ -221,7 +224,7 @@
                     <div class="story__item">
                         <img class="story__item-img" src="img/BookMyShow Logo.svg" width="134" height="40" alt="">
                         <p class="story__item-text">
-                            Landify saved our time in designing my company page.   
+                            Landify saved our time in designing my company page.
                         </p>
                         <span class="story__item-username">
                             Kristin Watson
@@ -230,6 +233,59 @@
                         <span class="story__item-userposition">
                             Co-Founder, BookMyShow
                         </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="achievement">
+        <div class="container">
+            <div class="achievements">
+                <div class="achievements__title">
+                    <h2 class="achievements__title-title">
+                        Our 18 years of <br>achievements
+                    </h2>
+                    <p class="achievements-text">
+                        With our super powers we have reached this
+                    </p>
+                </div>
+                <div class="achievements__list">
+                    <div class="achievements__item">
+                        <img class="achievements__item-img" src="img/f_01.svg" alt="">
+                        <p class="achievements__item-title">
+                            10,000+
+                        </p>
+                        <p class="achievements__item-subtitle">
+                            Downloads per day
+                        </p>
+                    </div>
+                    <div class="achievements__item">
+                        <img class="achievements__item-img" src="img/f_04.svg" alt="">
+                        <p class="achievements__item-title">
+                            2 Million
+                        </p>
+                        <p class="achievements__item-subtitle">
+                            Users
+                        </p>
+                    </div>
+                    <div class="achievements__item">
+                        <img class="achievements__item-img" src="img/f_05.svg" alt="">
+                        <p class="achievements__item-title">
+                            500+
+                        </p>
+                        <p class="achievements__item-subtitle">
+                            Clients
+                        </p>
+                    </div>
+                    <div class="achievements__item">
+                        <img class="achievements__item-img" src="img/f_07.svg" alt="">
+                        <p class="achievements__item-title">
+                            140
+                        </p>
+                        <p class="achievements__item-subtitle">
+                            Countries
+                        </p>
                     </div>
                 </div>
             </div>
