add section headline

--- a/index.html
+++ b/index.html
@@ -292,6 +292,25 @@
         </div>
     </section>
 
+    <section class="headline">
+        <div class="container">
+            <div class="headline__content">
+                <div class="headline__img">
+                    <img class="headline__img-img" src="img/headline_img.png" width="540" height="540" alt="">
+                </div>
+                <div class="headline__item">
+                    <h2 class="headline__title">
+                        Headline
+                    </h2>
+                    <p class="headline__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum diam orci pretium a pharetra, feugiat cursus. Dictumst risus, sem egestas odio cras adipiscing vulputate. Nisi, risus in suscipit non. Non commodo volutpat, pharetra, vel.
+                    </p>
+                    <a class="headline__btn" href="#">Get started</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
