--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                     <p class="headline__text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum diam orci pretium a pharetra, feugiat cursus. Dictumst risus, sem egestas odio cras adipiscing vulputate. Nisi, risus in suscipit non. Non commodo volutpat, pharetra, vel.
                     </p>
-                    <a class="headline__btn" href="#">Get started</a>
+                    <button class="headline__btn">Get started</button>
                 </div>
             </div>
         </div>
