add section trends, add underline nav__link & btn

--- a/index.html
+++ b/index.html
@@ -311,6 +311,26 @@
         </div>
     </section>
 
+    <section class="trends">
+        <div class="container">
+            <div class="trends__list">
+                <div class="trends__item">
+                    <h2 class="trends__title">
+                        Enter the world of all fashion trends
+                    </h2>
+                </div>
+                <div class="trends__item">
+                    <p class="trends__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Venenatis scelerisque at quam congue posuere libero in sit quam. Consequat, scelerisque non tincidunt sit lectus senectus.
+                    </p>
+                </div>
+            </div>
+            <div class="trends__img">
+                <img src="img/Cover Image.png" width="1100" height="400" alt="">
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
