add section projects

--- a/index.html
+++ b/index.html
@@ -331,6 +331,36 @@
         </div>
     </section>
 
+    <section class="projects">
+        <div class="container">
+            <div class="project__block">
+                <div class="project__content">
+                    <h2 class="project__title">
+                        Manage your projects from your mobile
+                    </h2>
+                    <p class="project__text">
+                        Download the app to manage your projects, keep track of the progress and complete tasks without procastinating. Stay on track and complete on time!
+                    </p>
+                    <div class="project__link">
+                        <p class="project__link-text">
+                            Get the app
+                        </p>
+                        <a class="project__link-google" href="#" >
+                            <img src="img/header_GooglePlay.svg" width="135" height="40" alt="Google Play">
+                        </a>
+                        <a class="project__link-apple" href="" >
+                            <img src="img/header_AppStore.svg" width="135" height="40" alt="AppStore">
+                        </a>
+                    </div>
+                </div>
+                <div class="project__img">
+                    <img class="img__top" src="img/Phone Mockup 1.png"  alt="">
+                    <img class="img__bottom" src="img/Phone Mockup 2.png"  alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
