--- a/index.html
+++ b/index.html
@@ -303,7 +303,9 @@
                         Headline
                     </h2>
                     <p class="headline__text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum diam orci pretium a pharetra, feugiat cursus. Dictumst risus, sem egestas odio cras adipiscing vulputate. Nisi, risus in suscipit non. Non commodo volutpat, pharetra, vel.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum diam orci pretium a
+                        pharetra, feugiat cursus. Dictumst risus, sem egestas odio cras adipiscing vulputate. Nisi,
+                        risus in suscipit non. Non commodo volutpat, pharetra, vel.
                     </p>
                     <button class="headline__btn">Get started</button>
                 </div>
@@ -321,7 +323,8 @@
                 </div>
                 <div class="trends__item">
                     <p class="trends__text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Venenatis scelerisque at quam congue posuere libero in sit quam. Consequat, scelerisque non tincidunt sit lectus senectus.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Venenatis scelerisque at quam congue
+                        posuere libero in sit quam. Consequat, scelerisque non tincidunt sit lectus senectus.
                     </p>
                 </div>
             </div>
@@ -339,27 +342,69 @@
                         Manage your projects from your mobile
                     </h2>
                     <p class="project__text">
-                        Download the app to manage your projects, keep track of the progress and complete tasks without procastinating. Stay on track and complete on time!
+                        Download the app to manage your projects, keep track of the progress and complete tasks without
+                        procastinating. Stay on track and complete on time!
                     </p>
                     <div class="project__link">
                         <p class="project__link-text">
                             Get the app
                         </p>
-                        <a class="project__link-google" href="#" >
+                        <a class="project__link-google" href="#">
                             <img src="img/header_GooglePlay.svg" width="135" height="40" alt="Google Play">
                         </a>
-                        <a class="project__link-apple" href="" >
+                        <a class="project__link-apple" href="">
                             <img src="img/header_AppStore.svg" width="135" height="40" alt="AppStore">
                         </a>
                     </div>
                 </div>
                 <div class="project__img">
-                    <img class="img__top" src="img/Phone Mockup 1.png"  alt="">
-                    <img class="img__bottom" src="img/Phone Mockup 2.png"  alt="">
+                    <img class="img__top" src="img/Phone Mockup 1.png" alt="">
+                    <img class="img__bottom" src="img/Phone Mockup 2.png" alt="">
                 </div>
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <div class="footer__block">
+                <div class="block__menu">
+                    <div class="logo">
+                        <a href="#">
+                            <img src="img/logo_footer.svg" width="32" height="32" alt="logo landify">
+                        </a>                        
+                    </div>
+                    <a class="menu__link" href="#">
+                        Download Now
+                    </a>
+                    <a class="menu__link" href="">
+                        License
+                    </a>
+
+                    <ul class="menu__list">
+                        <li><a href="">About</a></li>
+                        <li><a href="">Features</a></li>
+                        <li><a href="">Pricing</a></li>
+                        <li><a href="">Careers</a></li>
+                        <li><a href="">Help</a></li>
+                        <li><a href="">Privacy Policy</a></li>
+                    </ul>
+                    <p class="copyright">
+                        © 2020 Landify UI Kit. All rights reserved
+                    </p>
+                </div>
+                <div class="block__app">
+                    <p>Get the App</p>
+                    <a href="#">
+                        <img src="img/header_AppStore.svg" width="135" height="40" alt="">
+                    </a>
+                    <a href="#">
+                        <img src="img/header_GooglePlay.svg" width="135" height="40" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
